2007-02-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug 4962: .htaccess in sysext fails in some Apache configurations

2007-02-15  Michael Stucki  <michael@typo3.org>

	* Reverted fix for bug #4689 (closes #4987): Fix seems to cause problems, reinvestiation is needed

2007-02-15  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #4947: SQL error with DBAL/PostgreSQL when listing or looking up reviewed extensions

2007-02-15  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fix: Display description of options in install tool correctly

2007-02-14  Bernhard Kraft  <kraftb@kraftb.at>

	* Added hook: New hook in t3lib_tceforms in method getSingleField allowing modification of single field rendering and adding buttons to alt_doc.php
	
2007-02-14  Rupert Germann  <rupi@gmx.li>

	* Fix: Excluded the adminPanel GETvars from t3lib_div::cHashParams to prevent a cHash mismatch
	
2007-02-11  Thomas Hempel  <thomas@work.de>

	* Fix bug #4943: Redundant comma in label_alt_force

2007-02-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #4423: BE search doesn't work with UTF-8 chars (thanks to John Angel)

2007-02-07  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1RC1
	* Fixed bug #4883: mod_rewrite rules rewrite missing favicon.ico to index.php (thanks to Stefan Geith for this hint - notice that manual modification of existing .htaccess files might be neccessary)
	* Added feature #4476: Allow limitation of config.linkVars
	* Fixed bug #4917: Wrong links inside mounted page with overlay (thanks to Melanie Meyer / Franz Ripfel)

2007-02-06  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 3985: Wrong substitution for spamProtectEmailAddresses_atSubst/spamProtectEmailAddresses_lastDotSubst

2007-02-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4742: link to user on User Admin page is following to wrong URL

2007-02-06  Michael Stucki  <michael@typo3.org>
